--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/output.css" />
+    <link href="./dist/output.css" rel="stylesheet">
   </head>
   <body class="flex justify-center bg-primary-900">
     <img
